# SmartCarProject

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  config.json  config_application_in.hpp  main.cpp  new_config.json  render_doc_launch.cap  run.ps1
assets/backpack/shader/: backpack.vert
assets/car/: license.txt  scene.gltf
assets/cube_example/: cube.hpp  cube_ebo.hpp
assets/cube_example/shader/: cube.frag
assets/cube_example/src/: cube.hpp  cube_ebo.hpp
assets/flag/: scene.gltf
assets/garage/: license.txt  scene.gltf
assets/gltf_cube/: Cube.gltf
assets/skybox/shader/: skybox.frag  skybox.vert
cmake/: FindGLFW.cmake
configs/: cameras.json  config.json  intersector.json  models.json  shaders.json  window.json
shader/: backpack.frag  backpack.vert  bbox.frag  bbox.vert  collision_intersection.comp  compute.comp  default.vert  instance.frag  instance.vert  intersection.comp  pbr.frag  pbr.inc  pbr.vert  ray_intersection.comp  skybox.frag  skybox.vert  triangle.frag  triangle.vert
src/: CMakeLists.txt  config_in.hpp  transform.hpp  triangle.cpp  triangle.hpp
src/accelerator/: accelerator.cpp  accelerator.hpp  accelerator_fwd.hpp
src/bbox/: bbox.cpp  bbox.hpp  bbox_fwd.hpp
src/camera/: camera.cpp  camera.hpp  camera_fwd.hpp
src/car/: car.hpp
src/car_model/: car_model.cpp  car_model.hpp  car_model_fwd.hpp
src/config/: config_handler.cpp  config_handler.hpp  config_handler_fwd.hpp
src/constants/: constants.cpp  constants.hpp
src/dqn/: batch.hpp  dqn.hpp  env.hpp  net.hpp  replay_buffer.hpp  trainer.hpp  types.hpp
src/gui/: gui.cpp  gui.hpp  gui_fwd.hpp
src/helpers/: helpers.cpp  helpers.hpp  helpers_fwd.hpp
src/instance/: instance.hpp
src/instanced_model/: instanced_model_fwd.hpp
src/intersector/: intersector.cpp  intersector.hpp  intersector_fwd.hpp
src/loader/: loader.cpp  loader.hpp  loader_fwd.hpp
src/material/: material.cpp  material.hpp  material_fwd.hpp
src/mesh/: mesh.cpp  mesh.hpp  mesh_fwd.hpp
src/model/: model.cpp  model.hpp  model_fwd.hpp
src/model/loader/: assimp_loader.hpp  tinygltf_loader.hpp
src/ray_intersector/: ray_intersector.hpp
src/shader/: compute.hpp
src/skybox/: skybox.cpp  skybox.hpp  skybox_fwd.hpp
src/texture/: texture.cpp  texture.hpp  texture_fwd.hpp
src/timer/: timer.cpp  timer.hpp  timer_fwd.hpp
src/transform/: transform.cpp  transform.hpp  transform_fwd.hpp
src/window/: window.cpp  window.hpp  window_fwd.hpp
torch_test/: CMakeLists.txt  main.cpp  network.hpp  run.ps1
torch_test/src/: dqn.hpp  helpers.hpp  replay_buffer.hpp  trainer.hpp
